--- a/Paint WEBGL/index.html
+++ b/Paint WEBGL/index.html
@@ -3,53 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo.css">
     <title>Paint WebGL</title>
 </head>
 <body>
-    <div class="container mt-2">
+    <div>
         <h1>WebGL Paint</h1>
-        <div class="row">
-            <div class="rendererStyle" id="mainView" style="width: 100%; height: 500px;"></div>
+        <div>
+            <div class="rendererStyle" id="mainView" style="width: 100%; height: 500px;">
             </div> <!-- Main Window -->
-            <div class="col-sm-6">
-                <h3>Movements</h3>
-                <p>A D W S Q E- Translate</p>
-                <p> &#8592 &#8593 &#8594 &#8595 - Scalate</p>
-                <p> U O I K J L - Rotation</p>
-                <p> Only square figures have Texture!</p>
-            </div>
-        </div> <!-- Row 1 -->
-            <div class="col-sm-6">
-                <div class="pickerSize" id="colorPicker">
-                    <button class="btn-size white"></button>
-                    <button class="btn-size grey"></button>
-                    <button class="btn-size black"></button>
-                    <button class="btn-size blue"></button>
-                    <button class="btn-size yellow"></button>
-                    <button class="btn-size green"></button>
-                    <button class="btn-size pink"></button>
-                    <button class="btn-size orange"></button>
-                    <button class="btn-size purple"></button>
-                    <button class="btn-size sky-blue"></button>
-                    <button class="btn-size aqua"></button>
-                    <button class="btn-size dark-blue"></button>
-                    <button class="btn-size brown"></button>
-                    <button class="btn-size red"></button>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="pickerSize" id="shapePicker">
-                    <button class="btn-size segment"></button>
-                    <button class="btn-size triangle"></button>
-                    <button class="btn-size square"></button>
-                    <button class="btn-size trapezoid"></button>
-                    <button class="btn-size pentagon"></button>
-                    <button class="btn-size circle"></button>
-                </div> 
-            </div>
-        
+        </div> <!-- Container Col -->
+        <div>
+            <h3>Movements</h3>
+            <p>A D W S Q E- Translate</p>
+            <p> &#8592 &#8593 &#8594 &#8595 - Scalate</p>
+            <p> U O I K J L - Rotation</p>
+            <p> Only square figures have Texture!</p>
+        </div><!-- Back Camera Col -->
+        <div class="pickerSize" id="colorPicker">
+            <button class="btn-size branco"></button>
+            <button class="btn-size cinza"></button>
+            <button class="btn-size preto"></button>
+            <button class="btn-size azul"></button>
+            <button class="btn-size amarelo"></button>
+            <button class="btn-size verde"></button>
+            <button class="btn-size rosa"></button>
+            <button class="btn-size ciano"></button>
+            <button class="btn-size vermelho"></button>
+        </div>
+        <div class="pickerSize" id="shapePicker">
+            <button class="btn-size segment"></button>
+            <button class="btn-size triangle"></button>
+            <button class="btn-size square"></button>
+            <button class="btn-size trapezoid"></button>
+            <button class="btn-size pentagon"></button>
+            <button class="btn-size circle"></button>
+        </div>
     </div> <!-- Camera containers -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
